--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Obscure Dinosaur Facts
 email: obscure.dinosaur.facts@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Here you will find obscure facts about well-known dinosaurs, and basic facts about obscure dinosaurs!
+  Here you will find facts about obscure dinosaurs, obscure facts about well-known dinosaurs, and other material covering such topics as evolution, taxonomy, geology, and pop culture!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
