twitter card issue

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site setings
 name: 'Obscure Dinosaur Facts'
 description: 'A blog by paleoartist Clara Takahashi'
-title_image: 'author.png'
+title_image: 'author.jpg'
 meta_description: ''
 logo:
 # Author image is used in site sidebar and greetings in the home page hero text
