fixed gallery again

--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ navigation:
   - text: About
     url: /about
   - text: Art
-    url: /art
+    url: /art/
   - text: Contact Me
     url: /contact
   - text: Search
